--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="lives" style="position:absolute;zIndex:1;width:100;height:100;"></div>
     <div id="blocker">
         <div id="instructions">
             <span id="play">Click to Play</span>
