--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="lives" style="position:absolute;zIndex:1;width:100;height:100;"></div>
+    <center><div id="msg" style="display:none;position:absolute;zIndex:1;"></div></center>
     <div id="blocker">
         <div id="instructions">
             <span id="play">Click to Play</span>
