--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>COMP392 Uphill Madness</title>
+    <title>COMP392 Flatland Radness</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="Content/app.css">
 </head>
